Frontend | Page structure components | Implement scrollbar | Set nav-bar fixed at top of scroll view

--- a/frontend/tmdb-angular/src/app/app.component.css
+++ b/frontend/tmdb-angular/src/app/app.component.css
@@ -1,22 +1,41 @@
 .body{
     background-color: #050a30;
     color:white;
-    height: 100%;
-    min-height: 100vh;    
+    height: 100%;    
 }
 
+.scroll-view-container{
+    height: 100%; 
+    margin: 0; 
+}
+
+.customed-navbar {
+    background-color: #010c20;
+    color: white;
+    margin: 0;
+}
+.navbar-brand{
+    color: white;
+}
+.navbar-toggler{
+    color:white;
+}
 .nav-active{
     font-weight: bold;
 }
 
 .router-outlet-content{
-    min-height: 89vh;
+    padding-top: 2vh;
+    min-height: 90vh;
 }
 
-.scroll-bar-container{
-    height: 94vh; 
-    margin: 0; 
+.footer{
+    height: 5vh; 
+    padding-top: 10px;
+    background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgba(0,0,0,1) 75%);
+    text-align: center;
 }
+
 .customed-ngx-scrollbar{
     --scrollbar-wrapper-color: red;
     --scrollbar-border-radius: 7px;
@@ -41,10 +60,3 @@
 .customed-ngx-scrollbar ::ng-deep  .scrollbar-thumb {
       background-color: green;
 } */
-
-.footer{
-    height: 5vh; 
-    padding-top: 10px;
-    background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgba(0,0,0,1) 75%);
-    text-align: center;
-}
